package GPSReceiverModule;

public class HoneywellReceiver extends GPSReceiver {
    @Override
    protected void showReceiver() {
        System.out.println("Honeywell GPS Reader is Used");
    }
}
