package GPSReceiverModule;

public class RockwellReceiver extends GPSReceiver {

    @Override
    protected void showReceiver() {
        System.out.println("Rockwell GPS Reader is Used");
    }
}
